make solved challenges much better readable

--- a/CTFd/themes/admin/assets/css/challenge-board.scss
+++ b/CTFd/themes/admin/assets/css/challenge-board.scss
@@ -29,8 +29,7 @@
 }
 
 .solved-challenge {
-  background-color: #37d63e !important;
-  opacity: 0.4;
+  background-color: #027521 !important;
   border: none;
 }
 
