--- a/CTFd/themes/admin/static/css/challenge-board.dev.css
+++ b/CTFd/themes/admin/static/css/challenge-board.dev.css
@@ -23,8 +23,7 @@
   box-shadow: 3px 3px 3px grey; }
 
 .solved-challenge {
-  background-color: #37d63e !important;
-  opacity: 0.4;
+  background-color: #027521 !important;
   border: none; }
 
 .corner-button-check {
